# ShanKa

./: .gitignore  LICENSE  README.en.md  README.md  drizzle.config.ts  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: check.yml  release-windows.yml  release.yml
scripts/: release-install-smoke.ps1  release-manifest.ps1  release-manual-text-test.ps1  release-msi-smoke.ps1  release-preflight.ps1  release-smoke.ps1
server/: tsconfig.json
server/drizzle/: 0000_mixed_wendell_vaughn.sql
server/src/: index.ts
shared/: contracts.ts  events.ts  index.ts  personas.json  personas.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_icon.rs  autostart.rs  lib.rs  main.rs
src-tauri/src/bridge/: mod.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/history/: mod.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/hud/: mod.rs
src-tauri/src/input/: mod.rs
src-tauri/src/keychain/: mod.rs
src-tauri/src/persona/: mod.rs
src-tauri/src/pipeline/: mod.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/rewrite/: mod.rs
src-tauri/src/selection/: mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/window/: mod.rs
src/app/: AppShell.vue  metadata.ts
src/composables/: useHud.ts
src/hud/: diff.ts  state.ts
src/i18n/: messages.ts  useI18n.ts
src/personas/: display.ts
tests/: hud-diff.test.ts  hud-state.test.ts  i18n-personas.test.ts  provider-settings.test.ts  shared-contracts.test.ts
(+19 files in other folders)
