[package]
name = "shanka"
version = "0.1.0"
description = "System-level AI text refinement middleware"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "shanka_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
global-hotkey = "0.8.0"
enigo = "0.6.1"
arboard = "3.6.1"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "gzip", "brotli", "deflate", "zstd"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time"] }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
